# ai-ready-rrhh-copilot

ai_ready_copilot/: .env.example  .gitignore  README.md  docker-compose.yaml  prepare_embeddings.py  pyproject.toml
ai_ready_copilot/docs/: politica_vacaciones_Version2.txt
ai_ready_copilot/resources/: prompts.yaml
ai_ready_copilot/src/.adk/: session.db
ai_ready_copilot/src/ai_ready_copilot/: app.py
ai_ready_copilot/src/ai_ready_copilot/tools/: calculator.py  rag.py  vacation_requester.py
ai_ready_copilot/texts/: politica_gastos_Version2.txt
