[project]
name = "ai-ready-copilot"
version = "0.1.0"
description = ""
authors = [
    {name = "JuliaÌn",email = "julian.garcia@diverger.ai"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.115.0,<0.124.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-genai (>=1.55.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "google-adk (>=1.21.0,<2.0.0)",
    "dateparser (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_ready_copilot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
